# ocr-automation-pipeline

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FALLBACK_OCR_SETUP.md  LICENSE  MONGODB_FETCHING_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_AI.md  README_HACKATHON.md  SECURITY.md  SETUP.md  app.py  check_models.py  create_test_docs.py  debug_mongodb.py  debug_ocr.py  demo_workflow.py  docker-compose.yml  document_schemas.py  gemini_processor.py  network_setup.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_api_only.txt  requirements_simple.txt  setup.bat  setup.sh  simple_test_endpoint.py  smart_validator.py  test_ai_extraction.py  test_ai_extraction_fixed.py  test_auto_fallback.py  test_gemini_extraction.py  (+8 more)
.github/workflows/: ci-cd.yml
Docs/: API.md  ENDPOINT_TEST_REPORT.md  MICROSERVICE_API.md  README_old.md  SECURITY.md
Docs/Inter_Service_Communicatioin/: ENDPOINT_REFERENCE.md  QUICK_START.md  SPRING_BOOT_INTEGRATION.md
Docs/microservice/: uses.md
assets/test_docs/: README.md
data/samples/: README.md  sample_10th_marksheet.txt  sample_jee_scorecard.txt
src/document_processor/: __init__.py  cloudinary_service.py  config.py  core.py  database.py  fallback_ocr.py  models.py  normalizer.py  schemas.py
src/ocr_pipeline/: __init__.py  api_only_processor.py  cli.py  enhanced_pipeline.py  pipeline.py  web_interface.py
src/ocr_pipeline/classifiers/: __init__.py  document_classifier.py
src/web_app/: app.py  app_ai.py  requirements.txt  run_demo.py
src/web_app/templates/: index.html  (+1 more)
tests/: conftest.py  test_api.py  test_core.py  test_microservice.py
(+8 files in other folders)
