[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-automation-pipeline"
version = "0.1.0"
description = "OCR Automation Pipeline for MIT Hackathon - Student Document Processing"
readme = "README.md"
authors = [{name = "MIT Hackathon Team", email = "team@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["ocr", "document-processing", "automation", "machine-learning"]
dependencies = [
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "paddlepaddle>=2.5.2",
    "paddleocr>=2.7.0.3",
    "opencv-python>=4.8.1.78",
    "pillow>=10.0.1",
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "transformers>=4.33.2",
    "torch>=2.0.1",
    "pandas>=2.1.0",
    "pydantic>=2.3.0",
]

[project.urls]
"Homepage" = "https://github.com/sanjanb/ocr-automation-pipeline"
"Bug Reports" = "https://github.com/sanjanb/ocr-automation-pipeline/issues"
"Source" = "https://github.com/sanjanb/ocr-automation-pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''